--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://mwufi.github.io"
+baseURL = "https://peaceful-brown-1ee8cb.netlify.com/"
 languageCode = "en-us"
 title = "StuffFluffRough"
 theme = "ananke"
