--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "StuffFluffRough"
 theme = "ananke"
 pygmentsCodeFences = true
-pygmentsStyle = "rainbow_dash"
+pygmentsStyle = "dracula"
 
 [params]
   favicon = ""
